# sparse-solver-gym

./: CMakeLists.txt  LICENSE  README.md  instructions.md
src/benchmarks/: laplacian_1d.cpp  laplacian_3d_streaming.cpp  laplacian_common.hpp
src/sparse_solver_gym/: benchmark.cpp  benchmark.hpp  cli.cpp  cli.hpp  main.cpp  orchestrator.cpp  orchestrator.hpp  perfetto_trace.cpp  perfetto_trace.hpp  tracing_solver.cpp  tracing_solver.hpp  worker.cpp  worker.hpp
